--- a/company monthly report/style.css
+++ b/company monthly report/style.css
@@ -12,37 +12,37 @@
   --color-primary-bg-faded: #eae8f85e;
   --color-accent-bg-faded: #80d0d629;
   --color-border: #e5e5e5;
-  --table-border-radius: 8px;
+  --table-border-radius: 1.345vw;
 }
 
 html {
   font-family: "proxima-nova";
-  display: flex;
+  /* display: flex;
   height: 100vh;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
 }
 
 body {
-  padding: 16px;
+  padding: 2.689vw;
   display: flex;
   flex-direction: column;
-  gap: 18px;
+  gap: 3.025vw;
   color: var(--color-text);
-  width: 595px;
-  height: 842px;
-  border: 1px solid #e8e8e8;
+  /* width: 595px; */
+  /* height: 842px; */
+  /* border: 1px solid #e8e8e8; */
   position: relative;
 }
 
 .section-header {
-  font-size: 12px;
-  line-height: 15px;
-  padding-bottom: 4px;
+  font-size: 2.017vw;
+  line-height: 1.25;
+  padding-bottom: 0.672vw;
   text-transform: uppercase;
   font-weight: 700;
   color: var(--color-primary);
-  border-bottom: 2px solid currentColor;
+  border-bottom: 0.336vw solid currentColor;
 }
 
 /* ***************************************************
@@ -51,17 +51,17 @@ body {
 
 .monthly-report-table {
   border-collapse: collapse;
-  border-radius: 8px;
-  width: 306px;
+  border-radius: 1.345vw;
+  width: 51.429vw;
 }
 
 .monthly-report-table th {
   background: var(--color-text);
   color: white;
-  font-size: 11px;
-  line-height: 17px;
+  font-size: 1.849vw;
+  line-height: 1.54;
   font-weight: 600;
-  padding: 6px 10px;
+  padding: 1.008vw 1.681vw;
   text-align: left;
 }
 
@@ -70,21 +70,21 @@ body {
 }
 
 .monthly-report-table td {
-  padding: 6px 10px;
-  font-size: 10px;
-  line-height: 15px;
+  padding: 1.008vw 1.681vw;
+  font-size: 1.681vw;
+  line-height: 1.5;
   background-color: white;
 }
 
 .monthly-report-table__label div {
   display: flex;
   align-items: center;
-  gap: 4px;
+  gap: 0.672vw;
 }
 
 .monthly-report-table__label-dot {
-  width: 8px;
-  height: 8px;
+  width: 1.345vw;
+  height: 1.345vw;
   border-radius: 100%;
   background-color: var(--color-text);
 }
@@ -93,12 +93,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 4px;
+  gap: 0.672vw;
 }
 
 .monthly-report-table__data-sub {
-  font-size: 6px;
-  line-height: 9px;
+  font-size: 1.008vw;
+  line-height: 1.5;
 }
 
 .monthly-report-table tr:first-child th:first-child,
@@ -129,39 +129,43 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 12px;
-  padding-bottom: 16px;
+  padding-top: 2.017vw;
+  padding-bottom: 2.689vw;
   width: 100%;
-  border-bottom: 4px solid var(--color-primary);
+  border-bottom: 0.672vw solid var(--color-primary);
 }
 
 .header__title {
   display: flex;
   flex-direction: column;
-  gap: 2px;
+  gap: 0.336vw;
 }
 
 .header__title--report {
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 3.361vw;
+  line-height: 1.2;
   font-weight: 600;
 }
 
 .header__title--company {
-  font-size: 10px;
-  line-height: 12px;
+  font-size: 1.681vw;
+  line-height: 1.2;
 }
 
 .header__logo {
   display: flex;
   align-items: end;
   flex-direction: column;
-  gap: 4px;
+  gap: 0.672vw;
+}
+
+.header__logo-gk {
+  width: 14.454vw;
 }
 
 .header__logo--date {
-  font-size: 12px;
-  line-height: 15px;
+  font-size: 2.017vw;
+  line-height: 1.25;
   font-weight: 800;
   color: var(--color-primary);
 }
@@ -173,30 +177,30 @@ body {
 .overview {
   display: flex;
   flex-direction: column;
-  gap: 6px;
+  gap: 1.008vw;
 }
 
 .overview__cards {
   background: var(--color-primary-bg);
-  padding: 14px 10px;
-  border-radius: 8px;
+  padding: 2.353vw 1.681vw;
+  border-radius: 1.345vw;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 6px;
+  gap: 1.008vw;
 }
 
 .overview__card {
   display: flex;
   flex-direction: column;
-  padding: 8px 10px;
-  gap: 8px;
+  padding: 1.345vw 1.681vw;
+  gap: 1.345vw;
   background: white;
-  border-radius: 4px;
+  border-radius: 0.672vw;
 }
 
 .overview__card-title {
-  font-size: 10.5px;
-  line-height: 13px;
+  font-size: 1.765vw;
+  line-height: 1.238;
   font-weight: 700;
   text-transform: uppercase;
   color: var(--color-primary);
@@ -205,10 +209,15 @@ body {
 .overview__card-data {
   display: flex;
   align-items: center;
-  gap: 7px;
-  font-size: 18px;
-  line-height: 22px;
+  gap: 1.176vw;
+  font-size: 3.025vw;
+  line-height: 1.22;
   font-weight: 500;
+}
+
+.overview__card-data img {
+  width: 3.361vw;
+  height: 3.361vw;
 }
 
 /* ***************************************************
@@ -218,13 +227,13 @@ body {
 .claims {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 1.681vw;
 }
 
 .claims-section {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 2.017vw;
 }
 
 /* ***************************************************
@@ -235,9 +244,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 40px;
-  border-radius: 8px;
-  padding: 10px 6px;
+  gap: 6.723vw;
+  border-radius: 1.345vw;
+  padding: 1.681vw 1.008vw;
   background: var(--color-primary-bg-faded);
 }
 
@@ -273,9 +282,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 40px;
-  border-radius: 8px;
-  padding: 10px 6px;
+  gap: 6.723vw;
+  border-radius: 1.345vw;
+  padding: 1.681vw 1.008vw;
   background: var(--color-accent-bg-faded);
 }
 
@@ -309,7 +318,16 @@ body {
 
 .generated-at {
   position: absolute;
-  bottom: 20px;
-  font-size: 6.5px;
-  right: 20px;
+  bottom: 3.361vw;
+  font-size: 1.092vw;
+  right: 3.361vw;
+}
+
+/* ***************************************************
+   *    CHART
+   *************************************************** */
+
+.chart {
+  width: 27.602vw;
+  height: 27.602vw;
 }
