feat: sync css code with goklaim be

--- a/company monthly report/style.css
+++ b/company monthly report/style.css
@@ -17,10 +17,6 @@
 
 html {
   font-family: "proxima-nova";
-  /* display: flex;
-  height: 100vh;
-  align-items: center;
-  justify-content: center; */
 }
 
 body {
@@ -29,9 +25,7 @@ body {
   flex-direction: column;
   gap: 3.025vw;
   color: var(--color-text);
-  /* width: 595px; */
-  /* height: 842px; */
-  /* border: 1px solid #e8e8e8; */
+  padding-bottom: 0;
   position: relative;
 }
 
